--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"svelte-copy": "^1.4.1",
 		"svelte-preprocess": "^5.1.3",
 		"vite": "^5.1.6",
-		"vite-plugin-svgstring": "^1.0.0"
+		"vite-plugin-svgstring": "^1.0.0",
+		"topojson-client": "3.1.0"
 	},
 	"type": "module",
 	"engines": {
