--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,7 @@
 			"$stores/*": "./src/stores/*",
 			"$styles/*": "./src/styles/*",
 			"$svg/*": "./src/svg/*",
-			"$utils/*": "./src/utils/*",
+			// "$utils/*": "./src/utils/*",
 		}
 	},
 	"include": [
