--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
 		"svelte": "^4.2.12",
 		"svelte-copy": "^1.4.1",
 		"svelte-preprocess": "^5.1.3",
+		"topojson-client": "3.1.0",
 		"vite": "^5.1.6",
-		"vite-plugin-svgstring": "^1.0.0",
-		"topojson-client": "3.1.0"
+		"vite-plugin-svgstring": "^1.0.0"
 	},
 	"type": "module",
 	"engines": {
 		"node": ">= 18.12.0"
 	},
-	"browserslist": "> 0.5%, last 4 versions, not ie <= 11, not ie_mob <= 11"
+	"browserslist": "> 0.5%, last 4 versions, not ie <= 11, not ie_mob <= 11",
+	"dependencies": {
+		"arquero": "^5.4.0"
+	}
 }
