--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,16 +7,10 @@
 			"$routes/*": "./src/routes/*",
 			"$stores/*": "./src/stores/*",
 			"$styles/*": "./src/styles/*",
-			"$svg/*": "./src/svg/*",
-			// "$utils/*": "./src/utils/*",
+			"$svg/*": "./src/svg/*"
 		}
 	},
-	"include": [
-		"src/**/*.js",
-		"src/**/*.svelte"
-	],
-	"exclude": [
-		"tasks/*.js"
-	],
+	"include": ["src/**/*.js", "src/**/*.svelte"],
+	"exclude": ["tasks/*.js"],
 	"extends": "./.svelte-kit/tsconfig.json"
 }
