--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,12 @@
 {
-	"useTabs": true,
-	"trailingComma": "none",
-	"printWidth": 80,
-	"svelteSortOrder": "options-scripts-markup-styles"
+  "plugins": ["prettier-plugin-svelte"],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte",
+        "svelteSortOrder": "options-scripts-markup-styles"
+      }
+    }
+  ]
 }
