--- a/package.json
+++ b/package.json
@@ -1,50 +1,54 @@
 {
-	"name": "svelte-starter",
-	"version": "5.17.0",
-	"scripts": {
-		"style": "node tasks/style-dictionary.js",
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"lint": "prettier --check --plugin-search-dir=. .",
-		"format": "prettier --write --plugin-search-dir=. .",
-		"gh-pages": "npm run build && npx gh-pages -d build"
-	},
-	"devDependencies": {
-		"@rollup/plugin-dsv": "^3.0.4",
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.4",
-		"@sveltejs/vite-plugin-svelte": "3.0.2",
-		"archieml": "^0.5.0",
-		"autoprefixer": "^10.4.18",
-		"bits-ui": "^0.19.7",
-		"d3": "^7.9.0",
-		"gh-pages": "^6.1.1",
-		"layercake": "^8.1.1",
-		"lodash.debounce": "^4.0.8",
-		"lucide-svelte": "^0.358.0",
-		"postcss": "^8.4.36",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.2",
-		"rollup": "^4.13.0",
-		"rollup-plugin-svg": "^2.0.0",
-		"style-dictionary": "^3.9.2",
-		"svelte": "^4.2.12",
-		"svelte-copy": "^1.4.1",
-		"svelte-preprocess": "^5.1.3",
-		"topojson-client": "3.1.0",
-		"vite": "^5.1.6",
-		"vite-plugin-svgstring": "^1.0.0"
-	},
-	"type": "module",
-	"engines": {
-		"node": ">= 18.12.0"
-	},
-	"browserslist": "> 0.5%, last 4 versions, not ie <= 11, not ie_mob <= 11",
-	"dependencies": {
-		"@fontsource/lato": "^5.0.21",
-		"arquero": "^5.4.0",
-		"d3-svg-annotation": "^2.5.1",
-		"gsap": "^3.12.5"
-	}
+  "name": "svelte-starter",
+  "version": "5.17.0",
+  "scripts": {
+    "style": "node tasks/style-dictionary.js",
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "prettier --check --plugin-search-dir=. . && eslint .",
+    "format": "prettier --write --plugin-search-dir=. .",
+    "gh-pages": "npm run build && npx gh-pages -d build"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "@rollup/plugin-dsv": "^3.0.4",
+    "@sveltejs/adapter-static": "^3.0.1",
+    "@sveltejs/kit": "^2.5.4",
+    "@sveltejs/vite-plugin-svelte": "3.0.2",
+    "archieml": "^0.5.0",
+    "autoprefixer": "^10.4.18",
+    "bits-ui": "^0.19.7",
+    "d3": "^7.9.0",
+    "eslint": "^9.9.1",
+    "eslint-plugin-svelte": "^2.43.0",
+    "gh-pages": "^6.1.1",
+    "globals": "^15.9.0",
+    "layercake": "^8.1.1",
+    "lodash.debounce": "^4.0.8",
+    "lucide-svelte": "^0.358.0",
+    "postcss": "^8.4.36",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.2",
+    "rollup": "^4.13.0",
+    "rollup-plugin-svg": "^2.0.0",
+    "style-dictionary": "^3.9.2",
+    "svelte": "^4.2.12",
+    "svelte-copy": "^1.4.1",
+    "svelte-preprocess": "^5.1.3",
+    "topojson-client": "3.1.0",
+    "vite": "^5.1.6",
+    "vite-plugin-svgstring": "^1.0.0"
+  },
+  "type": "module",
+  "engines": {
+    "node": ">= 18.12.0"
+  },
+  "browserslist": "> 0.5%, last 4 versions, not ie <= 11, not ie_mob <= 11",
+  "dependencies": {
+    "@fontsource/lato": "^5.0.21",
+    "arquero": "^5.4.0",
+    "d3-svg-annotation": "^2.5.1",
+    "gsap": "^3.12.5"
+  }
 }
