--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@fontsource/lato": "^5.0.21",
     "arquero": "^5.4.0",
     "d3-svg-annotation": "^2.5.1",
-    "gsap": "^3.12.5"
+    "gsap": "^3.12.5",
+    "uuid": "^10.0.0"
   }
 }
